--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 header {
-    background: black;
     width: 100%;
+    height: 33px;
 
 }
 .navbar {
@@ -18,5 +18,24 @@ header {
 .submit_button {
     float: right;
     overflow: auto;
+    height: 25px;
+    margin-right: 4px;
+    margin-top: 6px;
 }
-
+.search_tab{
+    width: 55%;
+    height: 25px;
+    margin-top: 1px;
+}
+.logo_image{
+    height: 33px;
+    margin-right: 28px;
+    width: 100px;
+}
+.search_icon{
+    height: 27px;
+    margin: -9px -3px -9px;
+}
+.avatar{
+    height: 21px;
+}
