--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,60 @@
 
 body {
     background: #ffffff;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
-    background: black;
+    background: inherit;
     width: 100%;
-
-}
-.navbar {
-    width: 100%;
-}
-.logo {
-    float: left;
-    overflow: auto;
-}
-.submit_button {
-    float: right;
-    overflow: auto;
+    display: inline-block;
+    height: 50px;
 }
 
+.logodiv {
+    position: relative;
+    top: 8px;
+    display: inline;
+}
+.logo-img {
+    margin-top: 0px;
+    margin-left: 70px;
+}
+nav {
+    width: 100%;
+}
+
+.search_form {
+    display: inline-block;
+    margin-left: 70px;
+    height: inherit;
+}
+.search {
+    width: 700px;
+    height: 30px;
+    margin: 0px;
+    border: 1px solid gray;
+    border-right: none;
+}
+ input[type=text] {
+    padding: 3px;
+    margin-top: 8px;
+    font-size: 17px;
+}
+.search-button {
+    margin-left: -5px;
+    margin-top: 10px;
+    height: 38px;
+    width: 100px;
+    border: 1px solid gray;
+}
+
+.sign-in {
+    margin-left: 200px;
+    height: 35px;
+    width: 70px;
+    background: dodgerblue;
+    border: 1px solid dodgerblue;
+    border-radius: 3px;
+}
