--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 
 body {
     background: #ffffff;
-    border: 1px solid black;
     height: 1000px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -11,7 +10,6 @@ header {
     width: 100%;
     height: 33px;
     margin-top: 10px;
-    border: 1px solid black;
 }
 section{
     width: 60%;
@@ -19,7 +17,6 @@ section{
     display: flex;
     margin-left: -112px;
     margin-top: 40px;
-    border: 1px solid black;
 }
 span{
     margin-left: 44%;
@@ -57,16 +54,14 @@ span{
 .search_bar{
     margin-right: 40px;
 }
-/* .subscribe{
-    display: flex;
-}
-.subscribe span{
-    margin-top: 21px;
-    margin-left: 52%;
-} */
 
 .subscribe{
     position: relative;
+
+}
+
+.subscribe h3 {
+    margin-left: 50px;
 }
 .subscribe span{
     margin-left: 0%;
@@ -88,6 +83,14 @@ span{
 }
 .avatar {
     height: 21px;
+    cursor: pointer;
+
+}
+
+iframe{
+    height: 100%;
+    width: 100%;
+    border: 0px;
 }
 
 aside 
@@ -97,11 +100,19 @@ aside
         height: auto;
         margin-right: 10px;
         margin-left: 5px;
-        margin-top: 40px;
-        border: 1px solid black;
+        margin-top: 30px;
+        
     }
+.comment {
+    margin-left: 50px;
+}
 .sidebar-para {
     margin-top: 0px;
+    font-size: 1.0em;
+}
+.sidebar-img {
+    width:150px;
+    height:100px;
 }
 
 video {
@@ -151,3 +162,16 @@ article div {
   width: 100%;
   text-align: right;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+    section {
+        width: 100%;
+    }
+    aside {
+        width: auto;
+        margin-top: 60%;
+    }
+  }
