--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,51 @@
 
-
+/* Body style*/
 body {
     background: #ffffff;
     height: 1000px;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1em;
 }
-
+/* header style*/
 header {
     width: 100%;
     height: 33px;
     margin-top: 10px;
 }
+/* Article style*/
+article 
+    {
+        display: inline-flex;
+        margin: 10px 2px 0px 2px;
+    }
+article div {
+    padding-left: 10px;
+}
+
+/* like and dislike style*/
+.fa {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+/* Logo postion style*/
+.logo {
+    float: left;
+    overflow: auto;
+    margin-left: 60px;
+}
+
+/* logo size style*/
+.logo_image{
+    height: 33px;
+    margin-right: 28px;
+    width: 100px;
+}
+/* navbar width style*/
+.navbar {
+    width: 100%;
+}
+
+/* section style*/
 section{
     width: 60%;
     float: left;
@@ -18,17 +53,21 @@ section{
     margin-left: -112px;
     margin-top: 40px;
 }
+/* aside style*/
+aside 
+    {
+        display: inline-block;
+        width: 30%;
+        height: auto;
+        margin-right: 10px;
+        margin-left: 5px;
+        margin-top: 30px;
+    }
+/* span style*/
 span{
     margin-left: 44%;
 }
-.navbar {
-    width: 100%;
-}
-.logo {
-    float: left;
-    overflow: auto;
-    margin-left: 60px;
-}
+/* submit button position style*/
 .submit_button {
     float: right;
     overflow: auto;
@@ -36,6 +75,8 @@ span{
     margin-right: 4px;
     margin-top: 6px;
 }
+
+/* Search tab dimension style*/
 .search_tab{
     width: 55%;
     height: 27px;
@@ -44,22 +85,23 @@ span{
     border: 1px solid grey;
     border-right: none;
 }
+/* Search button position style*/
 .search_button {
     position: relative;
-    
     width: 100px;
     height: 31px;
     margin-left: -5px;
 }
+/* search bar margin style*/
 .search_bar{
     margin-right: 40px;
 }
 
+/* Subscribe button position style*/
 .subscribe{
     position: relative;
 
 }
-
 .subscribe h3 {
     margin-left: 50px;
 }
@@ -72,40 +114,27 @@ span{
 .subscribe .right{
     margin-top: 19px;
 }
-.logo_image{
-    height: 33px;
-    margin-right: 28px;
-    width: 100px;
+.subscribenow {
+    background: red;
+    color: white;
 }
-.search_icon{
-    height: 27px;
-    margin: -9px -3px -9px;
-}
+
+/* User avatar style*/
 .avatar {
     height: 21px;
     cursor: pointer;
-
 }
-
+/* video style*/
 iframe{
     height: 100%;
     width: 100%;
     border: 0px;
 }
-
-aside 
-    {
-        display: inline-block;
-        width: 30%;
-        height: auto;
-        margin-right: 10px;
-        margin-left: 5px;
-        margin-top: 30px;
-        
-    }
-.comment {
+/* Video Description style*/
+.description {
     margin-left: 50px;
 }
+/* Sidebar style*/
 .sidebar-para {
     margin-top: 0px;
     font-size: 1.0em;
@@ -114,33 +143,15 @@ aside
     width:150px;
     height:100px;
 }
-
-video {
-    margin-left: 50px;
-}
-
-article 
-    {
-        display: inline-flex;
-        margin: 10px 2px 0px 2px;
-    }
-article div {
-    padding-left: 10px;
-}
-.fa {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-.subscribenow {
-    background: red;
-    color: white;
-}
-
 .side-anchor {
     text-decoration: none;
     color: #383333;
+    font-size: 0.85em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: unset;
+    line-height: 1.0em;
 }
-
+/* video position style*/
 .vid-info p{
     position: relative;
 }
@@ -148,6 +159,7 @@ article div {
     margin-left: 0%;
 }
 
+/* styling left and right style*/
 .left{
     position: absolute;
     display: flex;
@@ -163,7 +175,7 @@ article div {
   width: 100%;
   text-align: right;
 }
-
+/* Responsive styling*/
 @media only screen and (max-width: 700px) {
     body {
       background-color: lightblue;
@@ -178,8 +190,6 @@ article div {
         margin-left: 15%;
     }
   }
-
-
   @media screen and (max-width: 925px) and (min-width: 700px) {
     aside {
         width: auto;
