--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ aside
         margin-right: 10px;
         margin-left: 5px;
         margin-top: 30px;
+        border: 1px solid black;
     }
 /* span style*/
 span{
